# logslash

./: Cargo.toml  README.md  syslog_rfc5424_newline.example  syslog_rfc5425.example
benches/: syslog.rs
src/: event.rs  lib.rs  main.rs  serialize.rs
src/codec/: mod.rs  nom.rs  syslog.rs
src/input/: mod.rs  nom.rs  syslog.rs  tcp.rs
src/output/: debug.rs  mod.rs  write.rs
