[package]
authors = ["Jakub Pastuszek <jpastuszek@gmail.com>"]
name = "logslash"
version = "0.1.0"

[dependencies]
assert_matches = "1.0.1"
chrono = "0.2.25"
error-chain = "0.7.1"
futures = "0.1.6"
serde = "0.9.0-rc1"
serde_derive = "0.9.0-rc1"
#serde_json = "0.8.4"
serde_json = {git = "https://github.com/serde-rs/json.git"}
tokio-core = "0.1.1"

[dependencies.maybe_string]
git = "https://github.com/jpastuszek/maybe-string.git"

[dependencies.nom]
path = "../nom"
version = "2.0.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.3.1"
